# oldGLExperiments

slick/: CMakeLists.txt  main.cpp  main.h  slick.cbp  slick.depend  slick.layout  somefuncs
slick/include/: button.cpp  button.h  camera.cpp  camera.h  structs.cpp  structs.h  text.h  texture.cpp  texture.h
